[package]
name = "fhe_string"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.5.0", features = [ "boolean", "shortint", "integer" ] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
env_logger = "0.10.0"
log = "0.4.20"

[dev-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
